--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "btoa": "1.2.1",
     "fs": "0.0.2",
     "http": "0.0.0",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.1",
     "popper.js": "1.15.0",
     "twbs-pagination": "^1.4.1",
     "web3": "1.0.0-beta.55",
